# arkanoid

./: BUILD.bazel  MODULE.bazel  export_presets.cfg  icon.svg.import  process_images.py  project.godot  requirements_lock.txt
assets/audio/: brick_hit.wav.import  brick_hit_metal.wav.import  explosion.wav.import  game_over.wav.import  game_start.wav.import  intro_music.wav.import  laser.wav.import  life.wav.import  paddle_hit.wav.import  powerup.wav.import  warp.wav.import
assets/fonts/: emulogic.ttf.import  generation.ttf.import  optimus.otf.import
assets/graphics/: background.png.import  ball.png.import  boss_doh.png.import  brick_blue.png.import  brick_cyan.png.import  brick_gold.png.import  brick_green.png.import  brick_orange.png.import  brick_pink.png.import  brick_red.png.import  brick_silver.png.import  brick_silver_1.png.import  brick_silver_10.png.import  brick_silver_2.png.import  brick_silver_3.png.import  brick_silver_4.png.import  brick_silver_5.png.import  brick_silver_6.png.import  brick_silver_7.png.import  brick_silver_8.png.import  brick_silver_9.png.import  brick_white.png.import  brick_yellow.png.import  door_top_left_1.png.import  door_top_left_2.png.import  door_top_left_3.png.import  door_top_left_4.png.import  door_top_left_5.png.import  door_top_left_6.png.import  door_top_left_7.png.import  door_top_right_1.png.import  door_top_right_2.png.import  door_top_right_3.png.import  door_top_right_4.png.import  door_top_right_5.png.import  door_top_right_6.png.import  door_top_right_7.png.import  edge_left.png.import  edge_right.png.import  edge_top.png.import  (+234 more)
assets/levels/: level1.txt  level10.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt
infografics/: RecreaciónArkanoidenGodotGuíaCompleta.md
scenes/core/: GameOver.tscn  Intro.tscn  Main.tscn  Warp.tscn
scenes/entities/: Ball.tscn  (+5 more)
scripts/: AudioManager.gd  AudioManager.gd.uid  Ball.gd  Ball.gd.uid  Brick.gd  Brick.gd.uid  Enemy.gd  Enemy.gd.uid  GameManager.gd  GameManager.gd.uid  GameOver.gd  GameOver.gd.uid  Intro.gd  Intro.gd.uid  Laser.gd  Laser.gd.uid  LevelLoader.gd  LevelLoader.gd.uid  Main.gd  Main.gd.uid  PowerUp.gd  PowerUp.gd.uid  Vaus.gd  Vaus.gd.uid  Warp.gd  Warp.gd.uid
tools/: BUILD.bazel  audio_config.json  audio_editor.py  generate_audio.py
tools/audio/: generate_audio.py
(+10 files in other folders)
